[package]
name = "debug-here"
version = "0.1.2"
authors = ["Ethan Pailes <ethanpailes@gmail.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/ethanpailes/debug-here"
documentation = "https://docs.rs/debug-here"
homepage = "https://github.com/ethanpailes/debug-here"
description = """
A macro to shave precious seconds off the time it takes to start debugging.
"""

[workspace]
members = [
    "debug-me",
    "debug-here-gdb-wrapper",
]

[dependencies]
lazy_static = "1.1.0"
nix = "0.11.0"
which = "2.0"
